Implement partition-aware Kafka routing
Map logical events-broker partition values to native Kafka partitions
when publishing and subscribing.

Use the configured event property and partition values from
events-broker.config to resolve the target Kafka partition.

Publish events to that partition when the topic is partition-aware, and
use native Kafka assign() for partition-specific consumers.

Reject partition-aware subscriptions for the REST client type, which
does not support this mode yet.

Depends-On: https://gerrit-review.googlesource.com/c/modules/events-broker/+/588624
Bug: Issue 520246089
Change-Id: I452fd37ebc78f2a22902fad4f0d084d06163fbf5